<resources>

    <!-- app name -->
    <string name="app_name">Website to App</string>
    <string name="tagline">The Awesome Web Application!</string>

    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- end of the ad section -->


    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/helpfulappsbd/</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCqpLWjZUbFca3ULvpiRuLcw</string>
    <string name="twitter_user_id">twitter://user?user_id=716462892967538689</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/taufiqur59</string>
    <string name="instagram_user_name">taufiqurn</string>

    <!-- terms and conditions, privacy policy and faq url -->
    <string name="terms_url">https://docs.google.com/document/d/1-UJjnUSd6f82gNvwZznTDiDSYfnHX2fYQpjpmBG_RNg/edit?usp=sharing</string>
    <string name="privacy_url">https://docs.google.com/document/d/1pfm5xgtbXW4Twxbh_8Q_3-75QoO5KySZkysli3zE0gI/edit?usp=sharing</string>
    <string name="faq_url">https://docs.google.com/document/d/122500Gtso7Fj3VhMB5TNKaELZrfR95urBNJczI63DFQ/edit?usp=sharing</string>

    <!-- about developer text  -->
    <string name="developer_name">Taufiqur Rahman Nishat</string>
    <string name="developer_detail">Entrepreneur, Bangladesh</string>
    <string name="developer_message">If you like this app, please give it a good rating, share with friends and show your support to us.</string>

    <!-- developer page: replace the developer id by yours -->
    <string name="developer_page">market://dev?id=9082460539100844090</string>
    <string name="alternate_dev_page">https://play.google.com/store/apps/dev?id=9082460539100844090</string>

    <string name="social">Social</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>

    <string name="support">Support</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="messenger">Messenger</string>
    <string name="email">Email</string>


    <string name="others">Others</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="more_app">More Apps</string>
    <string name="settings">Settings</string>
    <string name="about_dev">About Developer</string>
    <string name="exit">Exit</string>
    <string name="site_menu_delete_all">Delete All</string>
    <!-- end of the site configuration section-->

    <string name="rate_title">Rate This App</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it 5 stars?
    It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_positive">rate now</string>
    <string name="rate_remind_later">Later</string>
    <string name="rate_never">No, Thanks</string>
    <string name="empty_result">No data!</string>
    <string name="connect">Connect</string>
    <string name="tapAgain">Tap again to exit!</string>
    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="share_text">Install This App from:</string>
    <string name="send_to">Send To: </string>

    <string name="close_prompt">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="share_now">Share Now</string>
    <string name="failed">Failed</string>
    <string name="no_internet">No internet connection is available!</string>


    <string name="matches">matches</string>
    <string name="placeholder">..</string>
    <string name="notifications">Notifications</string>
    <string name="delete_all_notification">Do you want to Delete all the Notifications?</string>
    <string name="read_post">Visit Link</string>
    <string name="notification_title">Notification title: </string>
    <string name="notification_details">Notification details: </string>


    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summ">Turn on/off notification</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_cookie_title">Cookie</string>
    <string name="pref_cookie_summ">Enable to remember cookies</string>
    <string name="pref_text_title">Text size</string>
    <string name="select_size">Select text size</string>

    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>


</resources>
