<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification"
        android:summary="@string/pref_notification_summ"
        android:title="@string/pref_notification_title" />


    <ListPreference
        android:defaultValue="@string/default_text"
        android:dialogTitle="@string/select_size"
        android:entries="@array/text_entries"
        android:entryValues="@array/text_entries"
        android:key="pref_font_size"
        android:title="@string/pref_text_title" />


    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_cookie"
        android:summary="@string/pref_cookie_summ"
        android:title="@string/pref_cookie_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_zoom"
        android:summary="@string/pref_zoom_summ"
        android:title="@string/pref_zoom_title" />


</PreferenceScreen>